--- a/archives.html
+++ b/archives.html
@@ -14,12 +14,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Randomness </a></h1>
                 <nav><ul>
+                    <li><a href="/category/tests.html">Tests</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Randomness</h1>
 
 <dl>
+    <dt>Sun 15 January 2017</dt>
+    <dd><a href="/my-first-post.html">My first post</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
