--- a/authors.html
+++ b/authors.html
@@ -14,12 +14,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">Randomness </a></h1>
                 <nav><ul>
+                    <li><a href="/category/tests.html">Tests</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Randomness</h1>
     <ul>
+        <li><a href="/author/carson-pun.html">Carson Pun</a> (1)</li>
     </ul>
 </section>
 
