--- a/tags.html
+++ b/tags.html
@@ -14,12 +14,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Randomness </a></h1>
                 <nav><ul>
+                    <li><a href="/category/tests.html">Tests</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Randomness</h1>
     <ul>
+        <li><a href="/tag/firstpost.html">firstpost</a> (1)</li>
+        <li><a href="/tag/testing.html">testing</a> (1)</li>
     </ul>
 </section>
 
