--- a/authors.html
+++ b/authors.html
@@ -172,16 +172,16 @@ init_mathjax();
         <meta property="og:site_name" content="Randomness" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Randomness"/>
-        <meta property="og:url" content="http://carsonpun.github.io"/>
+        <meta property="og:url" content=""/>
         <meta property="og:description" content="Randomness"/>
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://carsonpun.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="http://carsonpun.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://carsonpun.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://carsonpun.github.io/theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
@@ -199,13 +199,13 @@ init_mathjax();
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://carsonpun.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Randomness            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="http://carsonpun.github.io/category/tooling.html">Tooling</a>
+                            <a href="/category/tooling.html">Tooling</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -220,7 +220,7 @@ Randomness            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Randomness</h1>
-        <li><a href="http://carsonpun.github.io/author/carson-pun.html">Carson Pun</a> (3)</li>
+        <li><a href="/author/carson-pun.html">Carson Pun</a> (3)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -255,13 +255,13 @@ Randomness            </a>
       </div>
    </div>
 </footer>
-<script src="http://carsonpun.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://carsonpun.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://carsonpun.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
