--- a/first-post-using-pelican.html
+++ b/first-post-using-pelican.html
@@ -165,7 +165,7 @@ init_mathjax = function() {
 init_mathjax();
 </script>
 
-<link rel="canonical" href="http://carsonpun.github.io/first-post-using-pelican.html">
+<link rel="canonical" href="/first-post-using-pelican.html">
 
         <meta name="author" content="Carson Pun" />
         <meta name="keywords" content="pelican,publishing,python" />
@@ -174,7 +174,7 @@ init_mathjax();
         <meta property="og:site_name" content="Randomness" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="First post using Pelican"/>
-        <meta property="og:url" content="http://carsonpun.github.io/first-post-using-pelican.html"/>
+        <meta property="og:url" content="/first-post-using-pelican.html"/>
         <meta property="og:description" content="first post with Pelican!"/>
         <meta property="article:published_time" content="2017-01-15" />
             <meta property="article:section" content="Tooling" />
@@ -185,11 +185,11 @@ init_mathjax();
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://carsonpun.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="http://carsonpun.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://carsonpun.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://carsonpun.github.io/theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
@@ -207,13 +207,13 @@ init_mathjax();
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://carsonpun.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Randomness            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="http://carsonpun.github.io/category/tooling.html">Tooling</a>
+                            <a href="/category/tooling.html">Tooling</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -231,7 +231,7 @@ Randomness            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://carsonpun.github.io/first-post-using-pelican.html"
+                    <a href="/first-post-using-pelican.html"
                        rel="bookmark"
                        title="Permalink to First post using Pelican">
                         First post using Pelican
@@ -252,11 +252,11 @@ Randomness            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="http://carsonpun.github.io/tag/pelican.html">pelican</a>
+	<a href="/tag/pelican.html">pelican</a>
         /
-	<a href="http://carsonpun.github.io/tag/publishing.html">publishing</a>
+	<a href="/tag/publishing.html">publishing</a>
         /
-	<a href="http://carsonpun.github.io/tag/python.html">python</a>
+	<a href="/tag/python.html">python</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -274,7 +274,7 @@ Randomness            </a>
             var disqus_shortname = 'carsonpun'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'first-post-using-pelican';
-                var disqus_url = 'http://carsonpun.github.io/first-post-using-pelican.html';
+                var disqus_url = '/first-post-using-pelican.html';
 
             var disqus_config = function () {
                 this.language = "en";
@@ -331,13 +331,13 @@ Randomness            </a>
       </div>
    </div>
 </footer>
-<script src="http://carsonpun.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://carsonpun.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://carsonpun.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
