--- a/using-pelican-with-ipython-notebook.html
+++ b/using-pelican-with-ipython-notebook.html
@@ -165,7 +165,7 @@ init_mathjax = function() {
 init_mathjax();
 </script>
 
-<link rel="canonical" href="/using-pelican-with-ipython-notebook.html">
+<link rel="canonical" href="http://carsonpun.github.io/using-pelican-with-ipython-notebook.html">
 
         <meta name="author" content="Carson Pun" />
         <meta name="keywords" content="pelican,publishing,python" />
@@ -174,7 +174,7 @@ init_mathjax();
         <meta property="og:site_name" content="Randomness" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Using Pelican with ipython notebook"/>
-        <meta property="og:url" content="/using-pelican-with-ipython-notebook.html"/>
+        <meta property="og:url" content="http://carsonpun.github.io/using-pelican-with-ipython-notebook.html"/>
         <meta property="og:description" content="Integrating ipynb with pelican"/>
         <meta property="article:published_time" content="2017-01-16" />
             <meta property="article:section" content="Tooling" />
@@ -185,11 +185,11 @@ init_mathjax();
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://carsonpun.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://carsonpun.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="http://carsonpun.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://carsonpun.github.io/theme/css/style.css" type="text/css"/>
 
 
 
@@ -207,13 +207,13 @@ init_mathjax();
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="http://carsonpun.github.io/" class="navbar-brand">
 Randomness            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/tooling.html">Tooling</a>
+                            <a href="http://carsonpun.github.io/category/tooling.html">Tooling</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -231,7 +231,7 @@ Randomness            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/using-pelican-with-ipython-notebook.html"
+                    <a href="http://carsonpun.github.io/using-pelican-with-ipython-notebook.html"
                        rel="bookmark"
                        title="Permalink to Using Pelican with ipython notebook">
                         Using Pelican with ipython notebook
@@ -252,11 +252,11 @@ Randomness            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/pelican.html">pelican</a>
+	<a href="http://carsonpun.github.io/tag/pelican.html">pelican</a>
         /
-	<a href="/tag/publishing.html">publishing</a>
+	<a href="http://carsonpun.github.io/tag/publishing.html">publishing</a>
         /
-	<a href="/tag/python.html">python</a>
+	<a href="http://carsonpun.github.io/tag/python.html">python</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -396,6 +396,36 @@ if(typeof(mpld3) !== "undefined" && mpld3._mpld3IsLoaded){
 </div></p>
             </div>
             <!-- /.entry-content -->
+    <hr/>
+    <section class="comments" id="comments">
+        <h2>Comments</h2>
+
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'carsonpun'; // required: replace example with your forum shortname
+
+                    var disqus_identifier = 'using-pelican-with-ipython-notebook';
+                var disqus_url = 'http://carsonpun.github.io/using-pelican-with-ipython-notebook.html';
+
+            var disqus_config = function () {
+                this.language = "en";
+            };
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function () {
+                var dsq = document.createElement('script');
+                dsq.type = 'text/javascript';
+                dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+    </section>
         </article>
     </section>
 
@@ -433,14 +463,29 @@ if(typeof(mpld3) !== "undefined" && mpld3._mpld3IsLoaded){
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="http://carsonpun.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="http://carsonpun.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="http://carsonpun.github.io/theme/js/respond.min.js"></script>
 
+    <!-- Disqus -->
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'carsonpun'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>
+    <!-- End Disqus Code -->
     <!-- Google Analytics -->
     <script type="text/javascript">
 
