--- a/authors.html
+++ b/authors.html
@@ -205,6 +205,9 @@ Randomness            </a>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
+                            <a href="http://carsonpun.github.io/category/data-visualization.html">Data visualization</a>
+                        </li>
+                        <li >
                             <a href="http://carsonpun.github.io/category/tooling.html">Tooling</a>
                         </li>
             </ul>
@@ -220,7 +223,7 @@ Randomness            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Randomness</h1>
-        <li><a href="http://carsonpun.github.io/author/carson-pun.html">Carson Pun</a> (4)</li>
+        <li><a href="http://carsonpun.github.io/author/carson-pun.html">Carson Pun</a> (5)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -231,6 +234,7 @@ Randomness            </a>
               <ul class="list-group" id="social">
                 <li class="list-group-item"><a href="https://github.com/carsonpun"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
                 <li class="list-group-item"><a href="https://twitter.com/carsonpun1"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
+                <li class="list-group-item"><a href="http://stackoverflow.com/users/2958271/carson-pun"><i class="fa fa-stackoverflow-square fa-lg"></i> Stackoverflow</a></li>
               </ul>
             </li>
 
