--- a/first-post-using-pelican.html
+++ b/first-post-using-pelican.html
@@ -212,6 +212,9 @@ Randomness            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                        <li >
+                            <a href="http://carsonpun.github.io/category/data-visualization.html">Data visualization</a>
+                        </li>
                         <li class="active">
                             <a href="http://carsonpun.github.io/category/tooling.html">Tooling</a>
                         </li>
@@ -307,6 +310,7 @@ Randomness            </a>
               <ul class="list-group" id="social">
                 <li class="list-group-item"><a href="https://github.com/carsonpun"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
                 <li class="list-group-item"><a href="https://twitter.com/carsonpun1"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
+                <li class="list-group-item"><a href="http://stackoverflow.com/users/2958271/carson-pun"><i class="fa fa-stackoverflow-square fa-lg"></i> Stackoverflow</a></li>
               </ul>
             </li>
 
