--- a/an-interactive-view-for-us-energy-consumption.html
+++ b/an-interactive-view-for-us-energy-consumption.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Interactive view for US energy consumption - Randomness</title>
+    <title>An interactive view for US energy consumption - Randomness</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -165,17 +165,17 @@ init_mathjax = function() {
 init_mathjax();
 </script>
 
-<link rel="canonical" href="http://carsonpun.github.io/interactive-view-for-us-energy-consumption.html">
+<link rel="canonical" href="http://carsonpun.github.io/an-interactive-view-for-us-energy-consumption.html">
 
         <meta name="author" content="Carson Pun" />
         <meta name="keywords" content="dc,d3" />
-        <meta name="description" content="Interactive view for US energy consumption" />
+        <meta name="description" content="An interactive view for US energy consumption" />
 
         <meta property="og:site_name" content="Randomness" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="Interactive view for US energy consumption"/>
-        <meta property="og:url" content="http://carsonpun.github.io/interactive-view-for-us-energy-consumption.html"/>
-        <meta property="og:description" content="Interactive view for US energy consumption"/>
+        <meta property="og:title" content="An interactive view for US energy consumption"/>
+        <meta property="og:url" content="http://carsonpun.github.io/an-interactive-view-for-us-energy-consumption.html"/>
+        <meta property="og:description" content="An interactive view for US energy consumption"/>
         <meta property="article:published_time" content="2017-01-21" />
             <meta property="article:section" content="Data Visualization" />
             <meta property="article:tag" content="dc" />
@@ -233,10 +233,10 @@ Randomness            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://carsonpun.github.io/interactive-view-for-us-energy-consumption.html"
+                    <a href="http://carsonpun.github.io/an-interactive-view-for-us-energy-consumption.html"
                        rel="bookmark"
-                       title="Permalink to Interactive view for US energy consumption">
-                        Interactive view for US energy consumption
+                       title="Permalink to An interactive view for US energy consumption">
+                        An interactive view for US energy consumption
                     </a>
                 </h1>
             </header>
@@ -524,8 +524,8 @@ Randomness            </a>
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'carsonpun'; // required: replace example with your forum shortname
 
-                    var disqus_identifier = 'interactive-view-for-us-energy-consumption';
-                var disqus_url = 'http://carsonpun.github.io/interactive-view-for-us-energy-consumption.html';
+                    var disqus_identifier = 'an-interactive-view-for-us-energy-consumption';
+                var disqus_url = 'http://carsonpun.github.io/an-interactive-view-for-us-energy-consumption.html';
 
             var disqus_config = function () {
                 this.language = "en";
